# permissions2fast-fastapi

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: .env.example
src/permissions2fast_fastapi/: __init__.py  dependencies.py  seeder.py  settings.py
src/permissions2fast_fastapi/models/: __init__.py  permission_assignment_model.py  permission_category_model.py  permission_model.py  permission_route_model.py  role_level_model.py  role_model.py  role_permission_model.py  role_user_model.py  route_model.py  tenant_model.py  user_permission_model.py  user_role_model.py  user_tenant_role_model.py
src/permissions2fast_fastapi/routers/: __init__.py  permissions_router.py  roles_router.py  routes_router.py
src/permissions2fast_fastapi/schemas/: __init__.py  permission_category_schema.py  permission_schema.py  response_schemas.py  role_schema.py  route_schema.py
src/permissions2fast_fastapi/seeders/: manifest.json  seed_data.json
src/permissions2fast_fastapi/seeders/dev/: categories.json  permissions.json  roles.json
src/permissions2fast_fastapi/seeders/prod/: categories.json  permissions.json  roles.json
src/permissions2fast_fastapi/services/: __init__.py  access_service.py  permission_service.py  role_service.py  route_service.py
src/permissions2fast_fastapi/utils/: __init__.py  permission_cache.py  redis_client.py
tests/: conftest.py  test_models.py  test_multitenancy_config.py  test_multitenancy_rbac.py  test_permissions.py  test_seeder.py
